fix: time and translate

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <select>
           <option>en</option>
           <option>ru</option>
-          <option>ua</option>
+          <option>uk</option>
         </select>
       </div>
       <div class="temp-btns">
